--- a/package.json
+++ b/package.json
@@ -3,5 +3,6 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0"
+    "engines": { "node": ">=18.0.0" }
   }
 }
