--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ DefaultContentLanguage           = "en"                    # Default language fo
     fadeIn                       = true                    # Turn on/off the fade-in effect
     fadeInIndex                  = false                   # Turn on/off the fade-in effect on the index page even if fade-in was otherwise turned off
     dateFormat                   = "Jan 2, 2006"
-    email                        = "bhaggard@protonmail.com"   # E-mail address for contact section
+    email                        = "bo@bohaggard.com"   # E-mail address for contact section
     # customCSS                  = ["foo.css"]             # Include custom css files placed under assets/
     # customJS                   = ["foo.js"]              # Include custom JavaScript files placed under assets/
     # plausible                  = true                    # Use Plausible analytics (requires an account at Plausible.io)
@@ -59,7 +59,7 @@ DefaultContentLanguage           = "en"                    # Default language fo
         icon  = "linkedin-in" # icon name without the 'fa-'
         icon_pack = "fab"
     [[params.social]]
-        url = "mailto:bhaggard@protonmail.com"  # For a direct email link, use "mailto:bhaggard@prootnmail.com".
+        url = "mailto:bo@bohaggard.com"  # For a direct email link, use "mailto:bhaggard@prootnmail.com".
         icon = "paper-plane" # icon name without the 'fa-'
         icon_pack = "fas"
     [[params.social]]
